Test Sandbox Project/src/objects/Agent_Attendance__c.object
<CustomObject>
    <fields>
        <fullName>Agent_Scheduling__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent Scheduling</label>
        <referenceTo>Agent_Scheduling__c</referenceTo>
        <relationshipLabel>Agent Attendance</relationshipLabel>
        <relationshipName>Agent_Attendance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attendance_Date__c</fullName>
        <label>Attendance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Away_End_Date__c</fullName>
        <label>Away End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Away_Start_Date__c</fullName>
        <label>Away Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Logout__c</fullName>
        <label>End Logout</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Login__c</fullName>
        <label>Last Login</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Late__c</fullName>
        <formula>IF (Login_Date__c &gt; Last_Login__c, 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Late</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Login_Date__c</fullName>
        <label>Login Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Login_Periode__c</fullName>
        <formula>IF ( MONTH(Attendance_Date__c) == 1, &apos;January&apos;,
IF ( MONTH(Attendance_Date__c) == 2, &apos;February&apos;,
IF ( MONTH(Attendance_Date__c) == 3, &apos;March&apos;,
IF ( MONTH(Attendance_Date__c) == 4, &apos;April&apos;,
IF ( MONTH(Attendance_Date__c) == 5, &apos;May&apos;,
IF ( MONTH(Attendance_Date__c) == 6, &apos;June&apos;,
IF ( MONTH(Attendance_Date__c) == 7, &apos;July&apos;,
IF ( MONTH(Attendance_Date__c) == 8, &apos;August&apos;,
IF ( MONTH(Attendance_Date__c) == 9, &apos;September&apos;,
IF ( MONTH(Attendance_Date__c) == 10, &apos;October&apos;,
IF ( MONTH(Attendance_Date__c) == 11, &apos;November&apos;,
IF ( MONTH(Attendance_Date__c) == 12, &apos;December&apos;,&apos;&apos;))))))))))))
&amp;&apos; &apos;&amp;TEXT(Year(Attendance_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Login Periode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Login_Status__c</fullName>
        <formula>IF (Login_Date__c &gt; Last_Login__c, &apos;Late&apos;,&apos;On Time&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Login Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logout_Date__c</fullName>
        <label>Logout Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lunch_End_Date__c</fullName>
        <label>Lunch End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lunch_Start_Date__c</fullName>
        <label>Lunch Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Manager_Email_F__c</fullName>
        <formula>Owner:User.Manager.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager Email F</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Email__c</fullName>
        <label>Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>On_Time__c</fullName>
        <formula>IF (Login_Date__c &gt; Last_Login__c, 0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>On Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shift__c</fullName>
        <label>Shift</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>OH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Login__c</fullName>
        <label>Start Login</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <label>Agent Attendance</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OWNER.ALIAS</columns>
        <columns>NAME</columns>
        <columns>Agent_Scheduling__c</columns>
        <columns>Attendance_Date__c</columns>
        <columns>Login_Date__c</columns>
        <columns>Logout_Date__c</columns>
        <columns>Shift__c</columns>
        <columns>Login_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Agent Attendance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agent Attendance</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>